# MCCDaq-libusb-driver

./: .gitignore  61-mcc.rules  CMakeLists.txt  README.md  mccdevice.cpp  mccdevice.h
cmake/: FindUSB1.cmake  Findlibusb-1.0.cmake
